--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "description": "library for decloration solving graph",
   "main": "src/index.ts",
   "author": "Ahibis<pokseteve31@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "vitest": "^2.1.5"
+  },
+  "scripts": {
+    "test": "vitest"
+  }
 }
