--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ahibis<pokseteve31@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "typescript": "^5.6.3",
     "vitest": "^2.1.5"
   },
   "scripts": {
