--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "author": "Ahibis<pokseteve31@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.12.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
     "vitest": "^2.1.5"
   },
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "prettier": "prettier"
   }
 }
