--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,9 @@
   "tabWidth": 2,
   "useTabs": false,
   "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "trailingComma": "es5",
+  "endOfLine": "auto"
 }
