--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
+    "prettier-eslint": "^16.3.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.15.0",
     "vitest": "^2.1.5"
   },
   "scripts": {
     "test": "vitest",
-    "prettier": "prettier"
+    "prettier": "prettier",
+    "lint": "eslint"
+  },
+  "overrides": {
+    "eslint": "^9.15.0"
   }
 }
