--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
     "editor.formatOnSave": true, // optional
     "editor.formatOnSaveMode": "file", // required to format on save
     "files.autoSave": "onFocusChange", // optional but recommended
-    "eslint.useFlatConfig": true // set as "true" to run 'prettier' last not first
+    "eslint.useFlatConfig": true,
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "[markdown]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode"
+    } // set as "true" to run 'prettier' last not first
   }
