--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "composite": true,
+    // "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
+    // "moduleResolution": "bundler",
+    // "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "noUnusedParameters": false,
   }
 }
