--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
+    "typedoc": "^0.27.1",
+    "typedoc-plugin-markdown": "^4.3.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0",
     "vitest": "^2.1.5"
@@ -21,7 +23,8 @@
     "test": "vitest",
     "prettier": "prettier --write ./src",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "docs": "typedoc"
   },
   "overrides": {
     "eslint": "^9.15.0"
